--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "eliancodes-brutal",
+  "name": "pablofergus",
   "type": "module",
+  "private": false,
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
@@ -10,8 +11,27 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/rss": "^4.0.7",
+    "@astrojs/sitemap": "^3.1.6",
+    "@eliancodes/brutal-ui": "^0.2.6",
+    "@unocss/astro": "^0.62.4",
     "astro": "^4.15.9",
-    "@astrojs/check": "^0.9.3",
-    "typescript": "^5.6.2"
+    "astro-font": "^0.1.81",
+    "satori": "^0.11.1",
+    "satori-html": "^0.3.2"
+  },
+  "devDependencies": {
+    "@iconify-json/logos": "^1.2.0",
+    "@iconify-json/uil": "^1.2.0",
+    "@resvg/resvg-js": "^2.6.2",
+    "@typescript-eslint/parser": "^6.15.0",
+    "@unocss/reset": "^0.57.7",
+    "eslint": "^8.56.0",
+    "eslint-plugin-astro": "^0.29.1",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "prettier": "^3.3.3",
+    "prettier-plugin-astro": "^0.14.1",
+    "sharp": "^0.33.5",
+    "unocss": "^0.57.7"
   }
 }
